AWS SQS support added