@@ -1,7 +1,4 @@
-FROM openjdk:8-jre-alpine
-
+FROM openjdk:9-jre-slim
 EXPOSE 8080
-
-ENTRYPOINT ["java", "-jar", "dockerhub-webhook-forwarder.jar"]
-
 ADD target/dockerhub-webhook-forwarder.jar dockerhub-webhook-forwarder.jar
+ENTRYPOINT ["java", "-jar", "-Dfile.encoding=UTF-8", "-Djava.security.egd=file:/dev/./urandom", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "dockerhub-webhook-forwarder.jar"]
